<resources>
    <string name="app_name">Cellematics Service Example</string>
    <string name="action_settings">Settings</string>

    <string name="cancel_wake_me_up">Cancel wake me up</string>
    <string name="cancel_wake_up_my_service">Cancel wake up my service</string>
    <string name="connect_app">Connect app</string>
    <string name="connection_status">Connection status:</string>
    <string name="disconnected">Disconnected</string>
    <string name="disconnect_app">Disconnect app</string>
    <string name="service_connected_not_initialized">TD Service connected, not initialized.</string>
    <string name="service_connected_and_setup">TD Service connected and properly setup</string>
    <string name="start_listening">Start listening</string>
    <string name="stop_listening">Stop listening</string>
    <string name="transit_classifier_class">Transit classifier class:</string>
    <string name="wake_me_up">Wake me up</string>
    <string name="wake_my_service">Wake up my service</string>
</resources>
