<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:fitsSystemWindows="true"
    tools:context="com.cellepathy.cellematicsserviceexample.MainActivity"
    android:orientation="vertical"
    android:background="#e2e2e2">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_app"
            android:id="@+id/connect_button"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="10dp"
            android:enabled="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_listening"
            android:id="@+id/start_button"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:enabled="false" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wake_me_up"
            android:id="@+id/wake_button"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="10dp"
            android:enabled="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wake_my_service"
            android:id="@+id/wake_my_service_button"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:enabled="false" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/connection_status"
        android:id="@+id/textView"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/disconnected"
        android:id="@+id/connection_status"
        android:background="#4d94ff"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:layout_marginBottom="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/transit_classifier_class"
        android:id="@+id/textView5"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/trip_class"
        android:background="#4d94ff"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:layout_marginBottom="15dp" />

</LinearLayout>